--- a/webapi/webapi.csproj
+++ b/webapi/webapi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -10,19 +10,18 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App" />
-        <PackageReference Include="Microsoft.Orleans.Core">
-          <Version>2.1.0-RC2</Version>
+        <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="2.1.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Orleans.OrleansRuntime">
-          <Version>2.1.0-RC2</Version>
+          <Version>2.1.0</Version>
         </PackageReference>
+        <PackageReference Include="Microsoft.Orleans.Transactions" Version="2.1.0" />
+        <PackageReference Include="Orleans.Providers.MongoDB" Version="2.0.1" />
         <PackageReference Include="OrleansDashboard">
-          <Version>2.0.9</Version>
+          <Version>2.1.1</Version>
         </PackageReference>
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Grains\Grains.csproj" />
     </ItemGroup>
 
 </Project>
