--- a/webapi/webapi.csproj
+++ b/webapi/webapi.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <DockerTargetOS>Linux</DockerTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +19,7 @@
           <Version>2.1.0</Version>
         </PackageReference>
         <PackageReference Include="Microsoft.Orleans.Transactions" Version="2.1.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.1916590" />
         <PackageReference Include="Orleans.Providers.MongoDB" Version="2.0.1" />
         <PackageReference Include="OrleansDashboard">
           <Version>2.1.1</Version>
